Bug 171561 - audiocd kioslave assigns wrong tags
Summary: audiocd kioslave assigns wrong tags
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: audiocd (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: icefox
URL:
Keywords:
: 172668 175383 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-09-23 23:46 UTC by Benjamin Schindler
Modified: 2008-11-17 11:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fixes off-by-one error (473 bytes, text/plain)
2008-09-23 23:47 UTC, Benjamin Schindler
Details
Fix for off-by-one error (865 bytes, application/octet-stream)
2008-09-24 13:35 UTC, Benjamin Schindler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Schindler 2008-09-23 23:46:05 UTC
Version:            (using KDE 4.1.1)
Compiler:          gcc-4.2 
OS:                Linux
Installed from:    Gentoo Packages

When ripping a cd, audiocd assigns correct filenames, however the tags are off by one, meaning the first title gets the tags of the second etc. The following patch fixes the problem for me. It's not very clean and very hackish, but it shows where the problem is
Comment 1 Benjamin Schindler 2008-09-23 23:47:26 UTC
Created attachment 27537 [details]
Fixes off-by-one error
Comment 2 Benjamin Schindler 2008-09-24 10:34:25 UTC
Actually, there are a whole lot of more bugs in there... I have not yet looked into all of them. If I get the time I'll do so
Let me state my experience:

- I ripped a 6cd Set (Schubert String Quartets)
- After cd 3, I shut the computer down and continued the day afterwards
- I think I used konqueror for cd 1-3, for cd 4,5 I used dolphin and for cd 6 I used konqueror again

Result: 

Filenames: 
- Most filenames were guessed correctly, but on the second day, the kioslave seemed to cache some results. So for cd5, I got the filenames for cd4. 
It seems that the use of dolphin was a bad choice. After inserting cd6, I pressed refresh several times, but it did not pick up the cd change so there seem to be some refresh problems

Album Tags: 
- For some reason, cd 1-3 all got the cd1 tag. A quick check revealed that the cddb info is correct
- I don't remember what happened with cd 4 and 5, but afaik they were both in cd 4. cd6 was okay

Track numbers: 
- Track numbers are all off by one. I think this is a result of my patch I posted above

Track names: 
- Track names were cached just like the filenames so cd1, cd2 and cd3 got the tags from cd1

So after re-reading what I wrote there seem to be two issues: 

- track numbers are also off-by-one (So one needs to rethink the way the track integer is used
- data is cached after a cd-swap

As you can see I'm on gentoo here and don't have debug info enabled... I tried to just enable debug for the kioslave, but it didn't have any effect. Since rebuilding all of kde takes a lot of time,  I rely on stdout debugging if that works from a kioslave
Comment 3 Benjamin Schindler 2008-09-24 13:35:49 UTC
Created attachment 27546 [details]
Fix for off-by-one error

This version of the patch makes vorbis ripping work completely. I haven't tested mp3 and other variants yet. 

I forgot to add that I was ripping to ogg so this might make a difference
Comment 4 Benjamin Schindler 2008-10-21 13:13:15 UTC
Is upstream dead? I posted the problem a month ago. I provided a patch. 

Is a comment about it too much beeing asked for? Andrew Morton once said that everybody who sends in a patch deserves a comment

Cheers
Comment 5 Richard Lärkäng 2008-10-21 19:51:35 UTC
SVN commit 874483 by larkang:

Backport:
Fix off by one in track info

BUG: 171561


 M  +2 -2      flac/encoderflac.cpp  
 M  +2 -2      lame/encoderlame.cpp  
 M  +3 -3      vorbis/encodervorbis.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=874483
Comment 6 Richard Lärkäng 2008-10-21 19:56:29 UTC
I'm afraid there is no active maintainer of the audiocd kioslave
at the moment, but thanks for the patch.
For the other problem (info not updating when changing cd) that's an old
problem, see bug #56800
Comment 7 Richard Lärkäng 2008-10-21 19:59:11 UTC
*** Bug 172668 has been marked as a duplicate of this bug. ***
Comment 8 Pino Toscano 2008-11-17 11:34:00 UTC
*** Bug 175383 has been marked as a duplicate of this bug. ***