Backport: Fix off by one in track info

BUG: 171561

svn path=/branches/KDE/4.1/kdemultimedia/kioslave/audiocd/; revision=874483